--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-keyboard",
-  "version": "1.0.0",
-  "dependencies": {
-    "vue": "^1.0.26"
-  },
-  "main": "dist/vue-keyboard.js"
+  "version": "1.1.0",
+  "homepage": "https://github.com/MartyWallace/vue-keyboard",
+  "main": "dist/vue-keyboard.js",
+  "license": "MIT",
+  "ignore": ["package.json", "demo"]
 }
