--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-	"name": "vue-keyboard",
-	"version": "1.4.0",
-	"devDependencies": {
-		"gulp": "^3.9.1",
-		"gulp-uglify": "1.5.*",
-		"gulp-babel": "^6.1.2",
-		"babel-preset-es2015": "^6.9.0"
-	}
+  "name": "vue-keyboard",
+  "version": "1.4.0",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "1.5.*"
+  }
 }
