--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "ignore": [
     "package.json",
-    "example.html",
+    "index.html",
     "src"
   ],
   "dependencies": {
