--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "vue-keyboard",
-  "version": "2.1.0",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.9.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "1.5.*"
-  }
+  "version": "3.0.0",
+  "description": "A soft keyboard component for Vue applications.",
+  "license": "MIT",
+  "author": "Marty Wallace <marty@martywallace.com> (https://martywallace.com)",
+  "keywords": [
+    "javascript",
+    "soft-keyboard",
+    "keyboard",
+    "vue",
+    "vuejs",
+    "component"
+  ]
 }
