--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-keyboard",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "A soft keyboard component for Vue applications.",
   "license": "MIT",
   "author": "Marty Wallace <marty@martywallace.com> (https://martywallace.com)",
@@ -11,5 +11,8 @@
     "vue",
     "vuejs",
     "component"
-  ]
+  ],
+  "peerDependencies": {
+    ""
+  }
 }
