--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vue-keyboard",
   "version": "3.1.0",
-  "description": "A soft keyboard component for Vue applications.",
+  "description": "A virtual keyboard component for Vue applications.",
   "license": "MIT",
   "author": "Marty Wallace <marty@martywallace.com> (https://martywallace.com)",
   "keywords": [
     "javascript",
-    "soft-keyboard",
+    "virtual-keyboard",
     "keyboard",
     "vue",
     "vuejs",
