--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vue-keyboard",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "A virtual keyboard component for Vue applications.",
   "license": "MIT",
   "author": "Marty Wallace <marty@martywallace.com> (https://martywallace.com)",
+  "main": "dist/vue-keyboard.js",
   "keywords": [
     "javascript",
     "virtual-keyboard",
@@ -11,5 +12,32 @@
     "vue",
     "vuejs",
     "component"
-  ]
+  ],
+  "scripts": {
+    "build": "webpack --progress --config webpack.build.config.js",
+    "dev": "webpack-dev-server --config webpack.dev.config.js --inline --hot --content-base dev/"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "vue": "^2.5.17",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
+  }
 }
