--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "component"
   ],
   "scripts": {
-    "build": "webpack --progress --config webpack.build.config.js",
-    "dev": "webpack-dev-server --config webpack.dev.config.js --inline --hot --content-base dev/"
+    "build": "webpack --progress --config webpack.build.config.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -34,8 +33,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0"
