--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vue": "^2.5.17",
     "vue-html-loader": "^1.2.4",
